fix issue with pages being cut off on mobile

--- a/app/assets/stylesheets/patient.scss
+++ b/app/assets/stylesheets/patient.scss
@@ -4,7 +4,8 @@
 //  @include border-radius(5px);
 //}
 
-$width: 375px;
+$width: 100%;
+$max_width: 375px;
 $height: 667px;
 $inputWidth: $width/9;
 $global_lr_margin: $width/30;
@@ -16,14 +17,11 @@ $global_tb_margin: $width/48;
 }
 
 .patient {
-  position: fixed;
+  position: relative;
   width: $width;
+  max-width: $max_width;
   height: $height;
   background-color: white;
-  top: 50%;
-  left: 50%;
-  margin-top: -($height/2);
-  margin-left: -($width/2);
 }
 
 .logo {
@@ -102,6 +100,7 @@ input.invalid {
   position: absolute;
   border-top: 1px solid #bbbbbb;
   bottom: $height/10;
+  max-width: $max_width;
   width: $width;
 }
 
@@ -112,9 +111,8 @@ input.invalid {
   bottom: 0;
   border-top: 1px solid #ddd;
   background-color: #eeeeee;
-  
-  
   height: $height/13;
+  max-width: $max_width;
   width: 100%;
   .forward_arrow, .back_arrow {
     font-size: 34px;
